# books-of-time

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.split.yaml  compose.yaml  main.py  pyproject.toml
.superpowers/sdd/: task-2-report.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_event_archive.py  0003_account_cookie_refresh_job.py  0004_comment_analysis_flags.py  0005_brin_time_indexes.py  0006_request_budget_states.py  0007_operational_alert_states.py  0008_collection_evidence_foundations.py  0009_cohort_state_and_policy.py  0010_snapshot_cohort_planning_job.py  0011_hot_comment_scans.py  0012_latest_comment_scans.py
books_of_time/: __init__.py  app.py  cli.py  coverage.py  worker.py
books_of_time/accounts/: __init__.py  manager.py  models.py  provider.py  qr_login.py  storage.py
books_of_time/analysis/: __init__.py  comment_flags.py  hot_turnover.py  keywords.py  propagation.py  replay.py  stance.py  templates.py  turning_points.py
books_of_time/collectors/: __init__.py  hot_comments.py  latest_comments.py  latest_scan.py  reply_comments.py  user_videos.py  video_stats.py
books_of_time/common/: __init__.py  logger.py
books_of_time/config/: __init__.py  loader.py
books_of_time/db/: __init__.py  base.py  cohort_repositories.py  comment_scan_repositories.py  engine.py  http_evidence.py  latest_scan_repositories.py  maintenance.py  (+6 more)
config/: config.yaml.example
deploy/: books-of-time.env.example  docker.env.example
docs/: ANALYSIS.md  CLI_REFERENCE.md  COLLECTION.md  CONFIGURATION.md  DATA_MODEL.md  DEPLOYMENT.md  EVENTS.md  LOGIN.md  OPERATIONS.md  PARTITIONING.md  README.md  REAL_DATA_LOGIN_E2E_2026-07-13.md  REAL_DATA_SMOKE.md  ROADMAP.md  SCALING_DECISIONS.md  SCALING_EVALUATION.md  TODO.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: qr_login.py
tests/: test_account_login.py  test_account_refresh.py  test_account_scheduled_refresh.py  test_account_storage.py  test_bilibili_client.py  test_cli.py  test_cohort_lifecycle_policy.py  test_cohort_materialization.py  test_cohort_models.py  test_cohort_policy_config.py  test_cohort_repositories.py  test_cohort_tier_policy.py  test_cohort_time_policy.py  test_comment_analysis_flags.py  test_comment_analysis_flags_cli.py  test_comment_repositories.py  test_comment_scan_models.py  test_comment_scan_repositories.py  test_comments_parser.py  test_config_loader.py  test_cookie_provider.py  test_coverage_repositories.py  test_database_maintenance.py  test_discovery_loop.py  test_discovery_schedule_policy.py  test_discovery_scheduler.py  test_distributed_rate_limiter.py  test_docker_deployment.py  test_event_cli.py  test_event_coverage.py  test_event_models.py  test_event_report.py  test_event_report_cli.py  test_event_repository.py  test_event_timeline.py  test_evidence_models.py  test_hot_comment_turnover.py  test_hot_comments_worker.py  test_hot_scan_policy.py  test_hot_scan_postgresql.py  (+55 more)
utils/: logger.py
(+115 files in other folders)
