[project]
name = "books-of-time"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bilibili-api-python>=17.4.2",
    "curl-cffi>=0.15.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

# ── 构建工具 ──────────────────────────────────────────────────
# 本项目暂不构建分发包；如有需要，取消注释并添加 packages 配置
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# ── 开发依赖 ──────────────────────────────────────────────────
[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]

# ── Ruff 配置 ─────────────────────────────────────────────────
[tool.ruff]
# 与 Black 兼容的默认行宽
line-length = 88
target-version = "py312"

# 鼓励使用 f-string
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort（import 排序）
    "N",   # pep8-naming
    "UP",  # pyupgrade（自动适配 Python 版本语法）
    "RUF", # ruff 专用规则
]
ignore = [
    "E501", # 行宽由 formatter 处理
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # 允许未使用的 import（用于 re-export）

[tool.ruff.format]
# 与项目现有风格保持一致
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
