[project]
name = "books-of-time"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.31.0",
    "bilibili-api-python>=17.4.2",
    "curl-cffi>=0.15.0",
    "pillow>=12.0",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "zstandard>=0.25.0",
]

# ── 构建工具 ──────────────────────────────────────────────────
# 本项目暂不构建分发包；如有需要，取消注释并添加 packages 配置
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# ── 开发依赖 ──────────────────────────────────────────────────
[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pre-commit>=4.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.9.0",
]

# ── Ruff 配置 ─────────────────────────────────────────────────
[tool.ruff]
# 与 Black 兼容的默认行宽
line-length = 88
target-version = "py312"

# 鼓励使用 f-string
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort（import 排序）
    "N",   # pep8-naming
    "UP",  # pyupgrade（自动适配 Python 版本语法）
    "RUF", # ruff 专用规则
]
ignore = [
    "E501", # 行宽由 formatter 处理
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# 中文注释/文档中的全角标点是故意的
"books_of_time/config/*.py" = ["RUF002", "RUF003"]
"books_of_time/db/*.py" = ["RUF002", "RUF003"]
"books_of_time/schemas/*.py" = ["RUF002", "RUF003"]

[tool.ruff.format]
# 与项目现有风格保持一致
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["."]
